// Bun Snapshot v1, https://goo.gl/fbAQLP

exports[`Generating vite stats v4 amd matches the snapshot 1`] = `
{
  "assets": [
    {
      "name": "assets/index-b7a309be.js",
      "normalized": "assets/index-*.js",
      "size": 72360,
    },
  ],
  "builtAt": Any<Number>,
  "bundleName": "test-vite-v4-amd",
  "bundler": {
    "name": "rollup",
    "version": "3.29.4",
  },
  "chunks": [
    {
      "entry": true,
      "files": [
        "assets/index-b7a309be.js",
      ],
      "id": "index",
      "initial": false,
      "names": [
        "index",
      ],
      "uniqueId": "0-index",
    },
  ],
  "duration": Any<Number>,
  "modules": [
    {
      "chunkUniqueIds": [
        "0-index",
      ],
      "name": "./vite/modulepreload-polyfill",
      "size": 1548,
    },
    {
      "chunkUniqueIds": [
        "0-index",
      ],
      "name": "./commonjsHelpers.js",
      "size": 334,
    },
    {
      "chunkUniqueIds": [
        "0-index",
      ],
      "name": "../node_modules/.pnpm/lodash@4.17.21/node_modules/lodash/lodash.js?commonjs-module",
      "size": 27,
    },
    {
      "chunkUniqueIds": [
        "0-index",
      ],
      "name": "../node_modules/.pnpm/lodash@4.17.21/node_modules/lodash/lodash.js",
      "size": 560242,
    },
    {
      "chunkUniqueIds": [
        "0-index",
      ],
      "name": "./test-apps/vite/src/getRandomNumber.js",
      "size": 98,
    },
    {
      "chunkUniqueIds": [
        "0-index",
      ],
      "name": "./test-apps/vite/src/main.js",
      "size": 163,
    },
    {
      "chunkUniqueIds": [
        "0-index",
      ],
      "name": "./test-apps/vite/index.html",
      "size": 0,
    },
  ],
  "outputPath": StringContaining "/distV4",
  "plugin": {
    "name": "codecov-vite-bundle-analysis-plugin",
    "version": "1.0.0",
  },
  "version": "1",
}
`;

exports[`Generating vite stats v4 cjs matches the snapshot 1`] = `
{
  "assets": [
    {
      "name": "assets/index-7de22500.js",
      "normalized": "assets/index-*.js",
      "size": 72342,
    },
  ],
  "builtAt": Any<Number>,
  "bundleName": "test-vite-v4-cjs",
  "bundler": {
    "name": "rollup",
    "version": "3.29.4",
  },
  "chunks": [
    {
      "entry": true,
      "files": [
        "assets/index-7de22500.js",
      ],
      "id": "index",
      "initial": false,
      "names": [
        "index",
      ],
      "uniqueId": "0-index",
    },
  ],
  "duration": Any<Number>,
  "modules": [
    {
      "chunkUniqueIds": [
        "0-index",
      ],
      "name": "./vite/modulepreload-polyfill",
      "size": 1548,
    },
    {
      "chunkUniqueIds": [
        "0-index",
      ],
      "name": "./commonjsHelpers.js",
      "size": 334,
    },
    {
      "chunkUniqueIds": [
        "0-index",
      ],
      "name": "../node_modules/.pnpm/lodash@4.17.21/node_modules/lodash/lodash.js?commonjs-module",
      "size": 27,
    },
    {
      "chunkUniqueIds": [
        "0-index",
      ],
      "name": "../node_modules/.pnpm/lodash@4.17.21/node_modules/lodash/lodash.js",
      "size": 560242,
    },
    {
      "chunkUniqueIds": [
        "0-index",
      ],
      "name": "./test-apps/vite/src/getRandomNumber.js",
      "size": 98,
    },
    {
      "chunkUniqueIds": [
        "0-index",
      ],
      "name": "./test-apps/vite/src/main.js",
      "size": 163,
    },
    {
      "chunkUniqueIds": [
        "0-index",
      ],
      "name": "./test-apps/vite/index.html",
      "size": 0,
    },
  ],
  "outputPath": StringContaining "/distV4",
  "plugin": {
    "name": "codecov-vite-bundle-analysis-plugin",
    "version": "1.0.0",
  },
  "version": "1",
}
`;

exports[`Generating vite stats v4 es matches the snapshot 1`] = `
{
  "assets": [
    {
      "name": "assets/index-320c8eaf.js",
      "normalized": "assets/index-*.js",
      "size": 73071,
    },
  ],
  "builtAt": Any<Number>,
  "bundleName": "test-vite-v4-esm",
  "bundler": {
    "name": "rollup",
    "version": "3.29.4",
  },
  "chunks": [
    {
      "entry": true,
      "files": [
        "assets/index-320c8eaf.js",
      ],
      "id": "index",
      "initial": false,
      "names": [
        "index",
      ],
      "uniqueId": "0-index",
    },
  ],
  "duration": Any<Number>,
  "modules": [
    {
      "chunkUniqueIds": [
        "0-index",
      ],
      "name": "./vite/modulepreload-polyfill",
      "size": 1548,
    },
    {
      "chunkUniqueIds": [
        "0-index",
      ],
      "name": "./commonjsHelpers.js",
      "size": 334,
    },
    {
      "chunkUniqueIds": [
        "0-index",
      ],
      "name": "../node_modules/.pnpm/lodash@4.17.21/node_modules/lodash/lodash.js?commonjs-module",
      "size": 27,
    },
    {
      "chunkUniqueIds": [
        "0-index",
      ],
      "name": "../node_modules/.pnpm/lodash@4.17.21/node_modules/lodash/lodash.js",
      "size": 560242,
    },
    {
      "chunkUniqueIds": [
        "0-index",
      ],
      "name": "./test-apps/vite/src/getRandomNumber.js",
      "size": 98,
    },
    {
      "chunkUniqueIds": [
        "0-index",
      ],
      "name": "./test-apps/vite/src/main.js",
      "size": 163,
    },
    {
      "chunkUniqueIds": [
        "0-index",
      ],
      "name": "./test-apps/vite/index.html",
      "size": 0,
    },
  ],
  "outputPath": StringContaining "/distV4",
  "plugin": {
    "name": "codecov-vite-bundle-analysis-plugin",
    "version": "1.0.0",
  },
  "version": "1",
}
`;

exports[`Generating vite stats v4 esm matches the snapshot 1`] = `
{
  "assets": [
    {
      "name": "assets/index-320c8eaf.js",
      "normalized": "assets/index-*.js",
      "size": 73071,
    },
  ],
  "builtAt": Any<Number>,
  "bundleName": "test-vite-v4-esm",
  "bundler": {
    "name": "rollup",
    "version": "3.29.4",
  },
  "chunks": [
    {
      "entry": true,
      "files": [
        "assets/index-320c8eaf.js",
      ],
      "id": "index",
      "initial": false,
      "names": [
        "index",
      ],
      "uniqueId": "0-index",
    },
  ],
  "duration": Any<Number>,
  "modules": [
    {
      "chunkUniqueIds": [
        "0-index",
      ],
      "name": "./vite/modulepreload-polyfill",
      "size": 1548,
    },
    {
      "chunkUniqueIds": [
        "0-index",
      ],
      "name": "./commonjsHelpers.js",
      "size": 334,
    },
    {
      "chunkUniqueIds": [
        "0-index",
      ],
      "name": "../node_modules/.pnpm/lodash@4.17.21/node_modules/lodash/lodash.js?commonjs-module",
      "size": 27,
    },
    {
      "chunkUniqueIds": [
        "0-index",
      ],
      "name": "../node_modules/.pnpm/lodash@4.17.21/node_modules/lodash/lodash.js",
      "size": 560242,
    },
    {
      "chunkUniqueIds": [
        "0-index",
      ],
      "name": "./test-apps/vite/src/getRandomNumber.js",
      "size": 98,
    },
    {
      "chunkUniqueIds": [
        "0-index",
      ],
      "name": "./test-apps/vite/src/main.js",
      "size": 163,
    },
    {
      "chunkUniqueIds": [
        "0-index",
      ],
      "name": "./test-apps/vite/index.html",
      "size": 0,
    },
  ],
  "outputPath": StringContaining "/distV4",
  "plugin": {
    "name": "codecov-vite-bundle-analysis-plugin",
    "version": "1.0.0",
  },
  "version": "1",
}
`;

exports[`Generating vite stats v4 module matches the snapshot 1`] = `
{
  "assets": [
    {
      "name": "assets/index-320c8eaf.js",
      "normalized": "assets/index-*.js",
      "size": 73071,
    },
  ],
  "builtAt": Any<Number>,
  "bundleName": "test-vite-v4-esm",
  "bundler": {
    "name": "rollup",
    "version": "3.29.4",
  },
  "chunks": [
    {
      "entry": true,
      "files": [
        "assets/index-320c8eaf.js",
      ],
      "id": "index",
      "initial": false,
      "names": [
        "index",
      ],
      "uniqueId": "0-index",
    },
  ],
  "duration": Any<Number>,
  "modules": [
    {
      "chunkUniqueIds": [
        "0-index",
      ],
      "name": "./vite/modulepreload-polyfill",
      "size": 1548,
    },
    {
      "chunkUniqueIds": [
        "0-index",
      ],
      "name": "./commonjsHelpers.js",
      "size": 334,
    },
    {
      "chunkUniqueIds": [
        "0-index",
      ],
      "name": "../node_modules/.pnpm/lodash@4.17.21/node_modules/lodash/lodash.js?commonjs-module",
      "size": 27,
    },
    {
      "chunkUniqueIds": [
        "0-index",
      ],
      "name": "../node_modules/.pnpm/lodash@4.17.21/node_modules/lodash/lodash.js",
      "size": 560242,
    },
    {
      "chunkUniqueIds": [
        "0-index",
      ],
      "name": "./test-apps/vite/src/getRandomNumber.js",
      "size": 98,
    },
    {
      "chunkUniqueIds": [
        "0-index",
      ],
      "name": "./test-apps/vite/src/main.js",
      "size": 163,
    },
    {
      "chunkUniqueIds": [
        "0-index",
      ],
      "name": "./test-apps/vite/index.html",
      "size": 0,
    },
  ],
  "outputPath": StringContaining "/distV4",
  "plugin": {
    "name": "codecov-vite-bundle-analysis-plugin",
    "version": "1.0.0",
  },
  "version": "1",
}
`;

exports[`Generating vite stats v4 iife matches the snapshot 1`] = `
{
  "assets": [
    {
      "name": "assets/index-646c8a11.js",
      "normalized": "assets/index-*.js",
      "size": 72356,
    },
  ],
  "builtAt": Any<Number>,
  "bundleName": "test-vite-v4-iife",
  "bundler": {
    "name": "rollup",
    "version": "3.29.4",
  },
  "chunks": [
    {
      "entry": true,
      "files": [
        "assets/index-646c8a11.js",
      ],
      "id": "index",
      "initial": false,
      "names": [
        "index",
      ],
      "uniqueId": "0-index",
    },
  ],
  "duration": Any<Number>,
  "modules": [
    {
      "chunkUniqueIds": [
        "0-index",
      ],
      "name": "./vite/modulepreload-polyfill",
      "size": 1548,
    },
    {
      "chunkUniqueIds": [
        "0-index",
      ],
      "name": "./commonjsHelpers.js",
      "size": 334,
    },
    {
      "chunkUniqueIds": [
        "0-index",
      ],
      "name": "../node_modules/.pnpm/lodash@4.17.21/node_modules/lodash/lodash.js?commonjs-module",
      "size": 27,
    },
    {
      "chunkUniqueIds": [
        "0-index",
      ],
      "name": "../node_modules/.pnpm/lodash@4.17.21/node_modules/lodash/lodash.js",
      "size": 560242,
    },
    {
      "chunkUniqueIds": [
        "0-index",
      ],
      "name": "./test-apps/vite/src/getRandomNumber.js",
      "size": 98,
    },
    {
      "chunkUniqueIds": [
        "0-index",
      ],
      "name": "./test-apps/vite/src/main.js",
      "size": 163,
    },
    {
      "chunkUniqueIds": [
        "0-index",
      ],
      "name": "./test-apps/vite/index.html",
      "size": 0,
    },
  ],
  "outputPath": StringContaining "/distV4",
  "plugin": {
    "name": "codecov-vite-bundle-analysis-plugin",
    "version": "1.0.0",
  },
  "version": "1",
}
`;

exports[`Generating vite stats v4 umd matches the snapshot 1`] = `
{
  "assets": [
    {
      "name": "assets/index-5458a54a.js",
      "normalized": "assets/index-*.js",
      "size": 72423,
    },
  ],
  "builtAt": Any<Number>,
  "bundleName": "test-vite-v4-umd",
  "bundler": {
    "name": "rollup",
    "version": "3.29.4",
  },
  "chunks": [
    {
      "entry": true,
      "files": [
        "assets/index-5458a54a.js",
      ],
      "id": "index",
      "initial": false,
      "names": [
        "index",
      ],
      "uniqueId": "0-index",
    },
  ],
  "duration": Any<Number>,
  "modules": [
    {
      "chunkUniqueIds": [
        "0-index",
      ],
      "name": "./vite/modulepreload-polyfill",
      "size": 1548,
    },
    {
      "chunkUniqueIds": [
        "0-index",
      ],
      "name": "./commonjsHelpers.js",
      "size": 334,
    },
    {
      "chunkUniqueIds": [
        "0-index",
      ],
      "name": "../node_modules/.pnpm/lodash@4.17.21/node_modules/lodash/lodash.js?commonjs-module",
      "size": 27,
    },
    {
      "chunkUniqueIds": [
        "0-index",
      ],
      "name": "../node_modules/.pnpm/lodash@4.17.21/node_modules/lodash/lodash.js",
      "size": 560242,
    },
    {
      "chunkUniqueIds": [
        "0-index",
      ],
      "name": "./test-apps/vite/src/getRandomNumber.js",
      "size": 98,
    },
    {
      "chunkUniqueIds": [
        "0-index",
      ],
      "name": "./test-apps/vite/src/main.js",
      "size": 163,
    },
    {
      "chunkUniqueIds": [
        "0-index",
      ],
      "name": "./test-apps/vite/index.html",
      "size": 0,
    },
  ],
  "outputPath": StringContaining "/distV4",
  "plugin": {
    "name": "codecov-vite-bundle-analysis-plugin",
    "version": "1.0.0",
  },
  "version": "1",
}
`;

exports[`Generating vite stats v4 system matches the snapshot 1`] = `
{
  "assets": [
    {
      "name": "assets/index-2fd1a797.js",
      "normalized": "assets/index-*.js",
      "size": 72405,
    },
  ],
  "builtAt": Any<Number>,
  "bundleName": "test-vite-v4-system",
  "bundler": {
    "name": "rollup",
    "version": "3.29.4",
  },
  "chunks": [
    {
      "entry": true,
      "files": [
        "assets/index-2fd1a797.js",
      ],
      "id": "index",
      "initial": false,
      "names": [
        "index",
      ],
      "uniqueId": "0-index",
    },
  ],
  "duration": Any<Number>,
  "modules": [
    {
      "chunkUniqueIds": [
        "0-index",
      ],
      "name": "./vite/modulepreload-polyfill",
      "size": 1548,
    },
    {
      "chunkUniqueIds": [
        "0-index",
      ],
      "name": "./commonjsHelpers.js",
      "size": 334,
    },
    {
      "chunkUniqueIds": [
        "0-index",
      ],
      "name": "../node_modules/.pnpm/lodash@4.17.21/node_modules/lodash/lodash.js?commonjs-module",
      "size": 27,
    },
    {
      "chunkUniqueIds": [
        "0-index",
      ],
      "name": "../node_modules/.pnpm/lodash@4.17.21/node_modules/lodash/lodash.js",
      "size": 560242,
    },
    {
      "chunkUniqueIds": [
        "0-index",
      ],
      "name": "./test-apps/vite/src/getRandomNumber.js",
      "size": 98,
    },
    {
      "chunkUniqueIds": [
        "0-index",
      ],
      "name": "./test-apps/vite/src/main.js",
      "size": 163,
    },
    {
      "chunkUniqueIds": [
        "0-index",
      ],
      "name": "./test-apps/vite/index.html",
      "size": 0,
    },
  ],
  "outputPath": StringContaining "/distV4",
  "plugin": {
    "name": "codecov-vite-bundle-analysis-plugin",
    "version": "1.0.0",
  },
  "version": "1",
}
`;

exports[`Generating vite stats v4 systemjs matches the snapshot 1`] = `
{
  "assets": [
    {
      "name": "assets/index-2fd1a797.js",
      "normalized": "assets/index-*.js",
      "size": 72405,
    },
  ],
  "builtAt": Any<Number>,
  "bundleName": "test-vite-v4-system",
  "bundler": {
    "name": "rollup",
    "version": "3.29.4",
  },
  "chunks": [
    {
      "entry": true,
      "files": [
        "assets/index-2fd1a797.js",
      ],
      "id": "index",
      "initial": false,
      "names": [
        "index",
      ],
      "uniqueId": "0-index",
    },
  ],
  "duration": Any<Number>,
  "modules": [
    {
      "chunkUniqueIds": [
        "0-index",
      ],
      "name": "./vite/modulepreload-polyfill",
      "size": 1548,
    },
    {
      "chunkUniqueIds": [
        "0-index",
      ],
      "name": "./commonjsHelpers.js",
      "size": 334,
    },
    {
      "chunkUniqueIds": [
        "0-index",
      ],
      "name": "../node_modules/.pnpm/lodash@4.17.21/node_modules/lodash/lodash.js?commonjs-module",
      "size": 27,
    },
    {
      "chunkUniqueIds": [
        "0-index",
      ],
      "name": "../node_modules/.pnpm/lodash@4.17.21/node_modules/lodash/lodash.js",
      "size": 560242,
    },
    {
      "chunkUniqueIds": [
        "0-index",
      ],
      "name": "./test-apps/vite/src/getRandomNumber.js",
      "size": 98,
    },
    {
      "chunkUniqueIds": [
        "0-index",
      ],
      "name": "./test-apps/vite/src/main.js",
      "size": 163,
    },
    {
      "chunkUniqueIds": [
        "0-index",
      ],
      "name": "./test-apps/vite/index.html",
      "size": 0,
    },
  ],
  "outputPath": StringContaining "/distV4",
  "plugin": {
    "name": "codecov-vite-bundle-analysis-plugin",
    "version": "1.0.0",
  },
  "version": "1",
}
`;

exports[`Generating vite stats v5 amd matches the snapshot 1`] = `
{
  "assets": [
    {
      "name": "assets/index-neb5ATfh.js",
      "normalized": "assets/index-neb5ATfh.js",
      "size": 72360,
    },
  ],
  "builtAt": Any<Number>,
  "bundleName": "test-vite-v5-amd",
  "bundler": {
    "name": "rollup",
    "version": "4.9.6",
  },
  "chunks": [
    {
      "entry": true,
      "files": [
        "assets/index-neb5ATfh.js",
      ],
      "id": "index",
      "initial": false,
      "names": [
        "index",
      ],
      "uniqueId": "0-index",
    },
  ],
  "duration": Any<Number>,
  "modules": [
    {
      "chunkUniqueIds": [
        "0-index",
      ],
      "name": "./vite/modulepreload-polyfill.js",
      "size": 1548,
    },
    {
      "chunkUniqueIds": [
        "0-index",
      ],
      "name": "./commonjsHelpers.js",
      "size": 334,
    },
    {
      "chunkUniqueIds": [
        "0-index",
      ],
      "name": "../node_modules/.pnpm/lodash@4.17.21/node_modules/lodash/lodash.js?commonjs-module",
      "size": 27,
    },
    {
      "chunkUniqueIds": [
        "0-index",
      ],
      "name": "../node_modules/.pnpm/lodash@4.17.21/node_modules/lodash/lodash.js",
      "size": 560242,
    },
    {
      "chunkUniqueIds": [
        "0-index",
      ],
      "name": "./test-apps/vite/src/getRandomNumber.js",
      "size": 98,
    },
    {
      "chunkUniqueIds": [
        "0-index",
      ],
      "name": "./test-apps/vite/src/main.js",
      "size": 163,
    },
    {
      "chunkUniqueIds": [
        "0-index",
      ],
      "name": "./test-apps/vite/index.html",
      "size": 0,
    },
  ],
  "outputPath": StringContaining "/distV5",
  "plugin": {
    "name": "codecov-vite-bundle-analysis-plugin",
    "version": "1.0.0",
  },
  "version": "1",
}
`;

exports[`Generating vite stats v5 cjs matches the snapshot 1`] = `
{
  "assets": [
    {
      "name": "assets/index-9JQbcWYj.js",
      "normalized": "assets/index-9JQbcWYj.js",
      "size": 72342,
    },
  ],
  "builtAt": Any<Number>,
  "bundleName": "test-vite-v5-cjs",
  "bundler": {
    "name": "rollup",
    "version": "4.9.6",
  },
  "chunks": [
    {
      "entry": true,
      "files": [
        "assets/index-9JQbcWYj.js",
      ],
      "id": "index",
      "initial": false,
      "names": [
        "index",
      ],
      "uniqueId": "0-index",
    },
  ],
  "duration": Any<Number>,
  "modules": [
    {
      "chunkUniqueIds": [
        "0-index",
      ],
      "name": "./vite/modulepreload-polyfill.js",
      "size": 1548,
    },
    {
      "chunkUniqueIds": [
        "0-index",
      ],
      "name": "./commonjsHelpers.js",
      "size": 334,
    },
    {
      "chunkUniqueIds": [
        "0-index",
      ],
      "name": "../node_modules/.pnpm/lodash@4.17.21/node_modules/lodash/lodash.js?commonjs-module",
      "size": 27,
    },
    {
      "chunkUniqueIds": [
        "0-index",
      ],
      "name": "../node_modules/.pnpm/lodash@4.17.21/node_modules/lodash/lodash.js",
      "size": 560242,
    },
    {
      "chunkUniqueIds": [
        "0-index",
      ],
      "name": "./test-apps/vite/src/getRandomNumber.js",
      "size": 98,
    },
    {
      "chunkUniqueIds": [
        "0-index",
      ],
      "name": "./test-apps/vite/src/main.js",
      "size": 163,
    },
    {
      "chunkUniqueIds": [
        "0-index",
      ],
      "name": "./test-apps/vite/index.html",
      "size": 0,
    },
  ],
  "outputPath": StringContaining "/distV5",
  "plugin": {
    "name": "codecov-vite-bundle-analysis-plugin",
    "version": "1.0.0",
  },
  "version": "1",
}
`;

exports[`Generating vite stats v5 es matches the snapshot 1`] = `
{
  "assets": [
    {
      "name": "assets/index-snsAD2Cg.js",
      "normalized": "assets/index-snsAD2Cg.js",
      "size": 73071,
    },
  ],
  "builtAt": Any<Number>,
  "bundleName": "test-vite-v5-esm",
  "bundler": {
    "name": "rollup",
    "version": "4.9.6",
  },
  "chunks": [
    {
      "entry": true,
      "files": [
        "assets/index-snsAD2Cg.js",
      ],
      "id": "index",
      "initial": false,
      "names": [
        "index",
      ],
      "uniqueId": "0-index",
    },
  ],
  "duration": Any<Number>,
  "modules": [
    {
      "chunkUniqueIds": [
        "0-index",
      ],
      "name": "./vite/modulepreload-polyfill.js",
      "size": 1548,
    },
    {
      "chunkUniqueIds": [
        "0-index",
      ],
      "name": "./commonjsHelpers.js",
      "size": 334,
    },
    {
      "chunkUniqueIds": [
        "0-index",
      ],
      "name": "../node_modules/.pnpm/lodash@4.17.21/node_modules/lodash/lodash.js?commonjs-module",
      "size": 27,
    },
    {
      "chunkUniqueIds": [
        "0-index",
      ],
      "name": "../node_modules/.pnpm/lodash@4.17.21/node_modules/lodash/lodash.js",
      "size": 560242,
    },
    {
      "chunkUniqueIds": [
        "0-index",
      ],
      "name": "./test-apps/vite/src/getRandomNumber.js",
      "size": 98,
    },
    {
      "chunkUniqueIds": [
        "0-index",
      ],
      "name": "./test-apps/vite/src/main.js",
      "size": 163,
    },
    {
      "chunkUniqueIds": [
        "0-index",
      ],
      "name": "./test-apps/vite/index.html",
      "size": 0,
    },
  ],
  "outputPath": StringContaining "/distV5",
  "plugin": {
    "name": "codecov-vite-bundle-analysis-plugin",
    "version": "1.0.0",
  },
  "version": "1",
}
`;

exports[`Generating vite stats v5 esm matches the snapshot 1`] = `
{
  "assets": [
    {
      "name": "assets/index-snsAD2Cg.js",
      "normalized": "assets/index-snsAD2Cg.js",
      "size": 73071,
    },
  ],
  "builtAt": Any<Number>,
  "bundleName": "test-vite-v5-esm",
  "bundler": {
    "name": "rollup",
    "version": "4.9.6",
  },
  "chunks": [
    {
      "entry": true,
      "files": [
        "assets/index-snsAD2Cg.js",
      ],
      "id": "index",
      "initial": false,
      "names": [
        "index",
      ],
      "uniqueId": "0-index",
    },
  ],
  "duration": Any<Number>,
  "modules": [
    {
      "chunkUniqueIds": [
        "0-index",
      ],
      "name": "./vite/modulepreload-polyfill.js",
      "size": 1548,
    },
    {
      "chunkUniqueIds": [
        "0-index",
      ],
      "name": "./commonjsHelpers.js",
      "size": 334,
    },
    {
      "chunkUniqueIds": [
        "0-index",
      ],
      "name": "../node_modules/.pnpm/lodash@4.17.21/node_modules/lodash/lodash.js?commonjs-module",
      "size": 27,
    },
    {
      "chunkUniqueIds": [
        "0-index",
      ],
      "name": "../node_modules/.pnpm/lodash@4.17.21/node_modules/lodash/lodash.js",
      "size": 560242,
    },
    {
      "chunkUniqueIds": [
        "0-index",
      ],
      "name": "./test-apps/vite/src/getRandomNumber.js",
      "size": 98,
    },
    {
      "chunkUniqueIds": [
        "0-index",
      ],
      "name": "./test-apps/vite/src/main.js",
      "size": 163,
    },
    {
      "chunkUniqueIds": [
        "0-index",
      ],
      "name": "./test-apps/vite/index.html",
      "size": 0,
    },
  ],
  "outputPath": StringContaining "/distV5",
  "plugin": {
    "name": "codecov-vite-bundle-analysis-plugin",
    "version": "1.0.0",
  },
  "version": "1",
}
`;

exports[`Generating vite stats v5 module matches the snapshot 1`] = `
{
  "assets": [
    {
      "name": "assets/index-snsAD2Cg.js",
      "normalized": "assets/index-snsAD2Cg.js",
      "size": 73071,
    },
  ],
  "builtAt": Any<Number>,
  "bundleName": "test-vite-v5-esm",
  "bundler": {
    "name": "rollup",
    "version": "4.9.6",
  },
  "chunks": [
    {
      "entry": true,
      "files": [
        "assets/index-snsAD2Cg.js",
      ],
      "id": "index",
      "initial": false,
      "names": [
        "index",
      ],
      "uniqueId": "0-index",
    },
  ],
  "duration": Any<Number>,
  "modules": [
    {
      "chunkUniqueIds": [
        "0-index",
      ],
      "name": "./vite/modulepreload-polyfill.js",
      "size": 1548,
    },
    {
      "chunkUniqueIds": [
        "0-index",
      ],
      "name": "./commonjsHelpers.js",
      "size": 334,
    },
    {
      "chunkUniqueIds": [
        "0-index",
      ],
      "name": "../node_modules/.pnpm/lodash@4.17.21/node_modules/lodash/lodash.js?commonjs-module",
      "size": 27,
    },
    {
      "chunkUniqueIds": [
        "0-index",
      ],
      "name": "../node_modules/.pnpm/lodash@4.17.21/node_modules/lodash/lodash.js",
      "size": 560242,
    },
    {
      "chunkUniqueIds": [
        "0-index",
      ],
      "name": "./test-apps/vite/src/getRandomNumber.js",
      "size": 98,
    },
    {
      "chunkUniqueIds": [
        "0-index",
      ],
      "name": "./test-apps/vite/src/main.js",
      "size": 163,
    },
    {
      "chunkUniqueIds": [
        "0-index",
      ],
      "name": "./test-apps/vite/index.html",
      "size": 0,
    },
  ],
  "outputPath": StringContaining "/distV5",
  "plugin": {
    "name": "codecov-vite-bundle-analysis-plugin",
    "version": "1.0.0",
  },
  "version": "1",
}
`;

exports[`Generating vite stats v5 iife matches the snapshot 1`] = `
{
  "assets": [
    {
      "name": "assets/index-HczW45b9.js",
      "normalized": "assets/index-HczW45b9.js",
      "size": 72356,
    },
  ],
  "builtAt": Any<Number>,
  "bundleName": "test-vite-v5-iife",
  "bundler": {
    "name": "rollup",
    "version": "4.9.6",
  },
  "chunks": [
    {
      "entry": true,
      "files": [
        "assets/index-HczW45b9.js",
      ],
      "id": "index",
      "initial": false,
      "names": [
        "index",
      ],
      "uniqueId": "0-index",
    },
  ],
  "duration": Any<Number>,
  "modules": [
    {
      "chunkUniqueIds": [
        "0-index",
      ],
      "name": "./vite/modulepreload-polyfill.js",
      "size": 1548,
    },
    {
      "chunkUniqueIds": [
        "0-index",
      ],
      "name": "./commonjsHelpers.js",
      "size": 334,
    },
    {
      "chunkUniqueIds": [
        "0-index",
      ],
      "name": "../node_modules/.pnpm/lodash@4.17.21/node_modules/lodash/lodash.js?commonjs-module",
      "size": 27,
    },
    {
      "chunkUniqueIds": [
        "0-index",
      ],
      "name": "../node_modules/.pnpm/lodash@4.17.21/node_modules/lodash/lodash.js",
      "size": 560242,
    },
    {
      "chunkUniqueIds": [
        "0-index",
      ],
      "name": "./test-apps/vite/src/getRandomNumber.js",
      "size": 98,
    },
    {
      "chunkUniqueIds": [
        "0-index",
      ],
      "name": "./test-apps/vite/src/main.js",
      "size": 163,
    },
    {
      "chunkUniqueIds": [
        "0-index",
      ],
      "name": "./test-apps/vite/index.html",
      "size": 0,
    },
  ],
  "outputPath": StringContaining "/distV5",
  "plugin": {
    "name": "codecov-vite-bundle-analysis-plugin",
    "version": "1.0.0",
  },
  "version": "1",
}
`;

exports[`Generating vite stats v5 umd matches the snapshot 1`] = `
{
  "assets": [
    {
      "name": "assets/index-5tDKlLKo.js",
      "normalized": "assets/index-5tDKlLKo.js",
      "size": 72423,
    },
  ],
  "builtAt": Any<Number>,
  "bundleName": "test-vite-v5-umd",
  "bundler": {
    "name": "rollup",
    "version": "4.9.6",
  },
  "chunks": [
    {
      "entry": true,
      "files": [
        "assets/index-5tDKlLKo.js",
      ],
      "id": "index",
      "initial": false,
      "names": [
        "index",
      ],
      "uniqueId": "0-index",
    },
  ],
  "duration": Any<Number>,
  "modules": [
    {
      "chunkUniqueIds": [
        "0-index",
      ],
      "name": "./vite/modulepreload-polyfill.js",
      "size": 1548,
    },
    {
      "chunkUniqueIds": [
        "0-index",
      ],
      "name": "./commonjsHelpers.js",
      "size": 334,
    },
    {
      "chunkUniqueIds": [
        "0-index",
      ],
      "name": "../node_modules/.pnpm/lodash@4.17.21/node_modules/lodash/lodash.js?commonjs-module",
      "size": 27,
    },
    {
      "chunkUniqueIds": [
        "0-index",
      ],
      "name": "../node_modules/.pnpm/lodash@4.17.21/node_modules/lodash/lodash.js",
      "size": 560242,
    },
    {
      "chunkUniqueIds": [
        "0-index",
      ],
      "name": "./test-apps/vite/src/getRandomNumber.js",
      "size": 98,
    },
    {
      "chunkUniqueIds": [
        "0-index",
      ],
      "name": "./test-apps/vite/src/main.js",
      "size": 163,
    },
    {
      "chunkUniqueIds": [
        "0-index",
      ],
      "name": "./test-apps/vite/index.html",
      "size": 0,
    },
  ],
  "outputPath": StringContaining "/distV5",
  "plugin": {
    "name": "codecov-vite-bundle-analysis-plugin",
    "version": "1.0.0",
  },
  "version": "1",
}
`;

exports[`Generating vite stats v5 system matches the snapshot 1`] = `
{
  "assets": [
    {
      "name": "assets/index-HjNjZsJ_.js",
      "normalized": "assets/index-HjNjZsJ_.js",
      "size": 72405,
    },
  ],
  "builtAt": Any<Number>,
  "bundleName": "test-vite-v5-system",
  "bundler": {
    "name": "rollup",
    "version": "4.9.6",
  },
  "chunks": [
    {
      "entry": true,
      "files": [
        "assets/index-HjNjZsJ_.js",
      ],
      "id": "index",
      "initial": false,
      "names": [
        "index",
      ],
      "uniqueId": "0-index",
    },
  ],
  "duration": Any<Number>,
  "modules": [
    {
      "chunkUniqueIds": [
        "0-index",
      ],
      "name": "./vite/modulepreload-polyfill.js",
      "size": 1548,
    },
    {
      "chunkUniqueIds": [
        "0-index",
      ],
      "name": "./commonjsHelpers.js",
      "size": 334,
    },
    {
      "chunkUniqueIds": [
        "0-index",
      ],
      "name": "../node_modules/.pnpm/lodash@4.17.21/node_modules/lodash/lodash.js?commonjs-module",
      "size": 27,
    },
    {
      "chunkUniqueIds": [
        "0-index",
      ],
      "name": "../node_modules/.pnpm/lodash@4.17.21/node_modules/lodash/lodash.js",
      "size": 560242,
    },
    {
      "chunkUniqueIds": [
        "0-index",
      ],
      "name": "./test-apps/vite/src/getRandomNumber.js",
      "size": 98,
    },
    {
      "chunkUniqueIds": [
        "0-index",
      ],
      "name": "./test-apps/vite/src/main.js",
      "size": 163,
    },
    {
      "chunkUniqueIds": [
        "0-index",
      ],
      "name": "./test-apps/vite/index.html",
      "size": 0,
    },
  ],
  "outputPath": StringContaining "/distV5",
  "plugin": {
    "name": "codecov-vite-bundle-analysis-plugin",
    "version": "1.0.0",
  },
  "version": "1",
}
`;

exports[`Generating vite stats v5 systemjs matches the snapshot 1`] = `
{
  "assets": [
    {
      "name": "assets/index-HjNjZsJ_.js",
      "normalized": "assets/index-HjNjZsJ_.js",
      "size": 72405,
    },
  ],
  "builtAt": Any<Number>,
  "bundleName": "test-vite-v5-system",
  "bundler": {
    "name": "rollup",
    "version": "4.9.6",
  },
  "chunks": [
    {
      "entry": true,
      "files": [
        "assets/index-HjNjZsJ_.js",
      ],
      "id": "index",
      "initial": false,
      "names": [
        "index",
      ],
      "uniqueId": "0-index",
    },
  ],
  "duration": Any<Number>,
  "modules": [
    {
      "chunkUniqueIds": [
        "0-index",
      ],
      "name": "./vite/modulepreload-polyfill.js",
      "size": 1548,
    },
    {
      "chunkUniqueIds": [
        "0-index",
      ],
      "name": "./commonjsHelpers.js",
      "size": 334,
    },
    {
      "chunkUniqueIds": [
        "0-index",
      ],
      "name": "../node_modules/.pnpm/lodash@4.17.21/node_modules/lodash/lodash.js?commonjs-module",
      "size": 27,
    },
    {
      "chunkUniqueIds": [
        "0-index",
      ],
      "name": "../node_modules/.pnpm/lodash@4.17.21/node_modules/lodash/lodash.js",
      "size": 560242,
    },
    {
      "chunkUniqueIds": [
        "0-index",
      ],
      "name": "./test-apps/vite/src/getRandomNumber.js",
      "size": 98,
    },
    {
      "chunkUniqueIds": [
        "0-index",
      ],
      "name": "./test-apps/vite/src/main.js",
      "size": 163,
    },
    {
      "chunkUniqueIds": [
        "0-index",
      ],
      "name": "./test-apps/vite/index.html",
      "size": 0,
    },
  ],
  "outputPath": StringContaining "/distV5",
  "plugin": {
    "name": "codecov-vite-bundle-analysis-plugin",
    "version": "1.0.0",
  },
  "version": "1",
}
`;
